[gd_scene load_steps=6 format=3 uid="uid://bxqj5xqjxqjxq"]

[ext_resource type="Script" path="res://scripts/StartScreen.gd" id="1_0hdqw"]
[ext_resource type="Texture2D" path="res://assets/backgrounds/office_background.jpg" id="2_1hdqw"]
[ext_resource type="Texture2D" path="res://assets/characters/mizuki_normal.png" id="3_2hdqw"]
[ext_resource type="Texture2D" path="res://assets/characters/saori_normal.png" id="4_3hdqw"]

[sub_resource type="Theme" id="Theme_1"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0hdqw")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2_1hdqw")
expand_mode = 1
stretch_mode = 6

[node name="CharacterContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MizukiSprite" type="TextureRect" parent="CharacterContainer"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
texture = ExtResource("3_2hdqw")
expand_mode = 1
stretch_mode = 5

[node name="SaoriSprite" type="TextureRect" parent="CharacterContainer"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = -100.0
offset_bottom = 300.0
texture = ExtResource("4_3hdqw")
expand_mode = 1
stretch_mode = 5

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 200.0
theme = SubResource("Theme_1")

[node name="StartButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "はじめから"

[node name="ContinueButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "つづきから"

[node name="GalleryButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ギャラリー"

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 600.0
offset_bottom = -20.0
theme_override_font_sizes/font_size = 36
text = "探偵ノクターン -銀の黄昏とアザゼルの鍵-"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MenuContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MenuContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_font_sizes/font_size = 20
text = "ver0.001"
horizontal_alignment = 2
vertical_alignment = 2
[connection signal="pressed" from="MenuContainer/GalleryButton" to="." method="_on_gallery_button_pressed"]
